# f-kit

./: LICENSE  fuckups  pyproject.toml  requirements.txt  setup.py
proto/: script.py  test.py  video.srt  video_censored.srt
speech_censor/: __init__.py  __main__.py  audio.py  av_processor.py  censor.py  constants.py  file_manager.py  file_operations.py  format_bridge.py  subtitles.py  transcribe.py  utils.py
tests/: drift_test.py  test.py
