[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-censor"
version = "0.1.0"
description = "A Python core for audio censorship using Whisper"
authors = [{name = "hass"}]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.dependencies]
faster-whisper = "*"
pysrt = "*"
tqdm = "*"
simpleaudio = "*"

[project.scripts]
speech-censor = "speech_censor.cli:main"