[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-censor"
version = "0.1.0"
description = "A Python core for audio censorship using Whisper"
authors = [
    { name = "has-s" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.dependencies]
faster-whisper = ">=0.9.0,<1.0.0"
pysrt = ">=1.1.2,<2.0.0"
tqdm = ">=4.66.0,<5.0.0"
simpleaudio = ">=1.0.4,<2.0.0"
pydub = ">=0.25.1,<1.0.0"

[project.scripts]
speech-censor = "speech_censor.cli:main"